# ajpegli

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  ruff.yml  ty.yml  wheels.yml
benchmarks/: bench_imread.py
docs/: benchmark-results.md  benchmarks.md  dataloader-results.md  dataloader.md  releasing.md  roadmap.md
python/ajpegli/: __init__.py  _native.py  _version.py  api.py  cli.py  errors.py  metadata.py  options.py
src/: bindings.cpp  decode.cpp  encode.cpp  error_mgr.cpp  error_mgr.h
tests/: conftest.py  test_bench_imread.py  test_benchmark_guard.py  test_check_versions.py  test_coverage_badge.py  test_imread.py  test_jpeg_corpus.py  test_metadata.py  test_options.py  test_public_api.py  test_workflows.py
tools/: benchmark_guard.py  check_versions.py  coverage_badge.py
