[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "ajpegli"
version = "0.1.2"
description = "Fast JPEG-to-NumPy image loading powered by Google jpegli"
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "ajpegli contributors" },
]
dependencies = [
  "numpy>=1.23",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
  "ty>=0.0.1a6",
]

[project.scripts]
ajpegli = "ajpegli.cli:main"

[tool.scikit-build]
wheel.packages = ["python/ajpegli"]
wheel.license-files = ["LICENSE", "licenses/*", "licenses/third_party/*"]
cmake.version = ">=3.24"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.sdist]
include = [
  "licenses/*",
  "licenses/third_party/*",
  "third_party/jpegli.commit",
  "third_party/jpegli/**",
]

[tool.cibuildwheel]
build = [
  "cp39-*",
  "cp310-*",
  "cp311-*",
  "cp312-*",
  "cp313-*",
]
skip = [
  "*-win32",
  "*-musllinux_*",
]
build-verbosity = 1
test-requires = [
  "numpy>=1.23",
]
test-command = """
python -c "from pathlib import Path; import ajpegli, numpy as np; image = Path(r'{project}') / 'third_party' / 'jpegli' / 'testdata' / 'jxl' / 'jpeg_reconstruction' / '1x1_exif_xmp.jpg'; decoded = ajpegli.imread(image); assert decoded.shape == (1, 1, 3); assert decoded.dtype == np.dtype('uint8'); print(ajpegli.__version__)"
"""

[tool.cibuildwheel.config-settings]
"cmake.define.AJPEGLI_BUNDLE_LIBPNG" = "ON"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=ajpegli",
  "--cov-report=term-missing",
  "--cov-fail-under=98",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["ajpegli"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PL",
  "PT",
  "PYI",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]
